style.css
body {
	margin: 0;
	padding: 0;
	background-color: #fafafa;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
	font-family: "Open Sans";
}

input{
	height: 24px;
	font-size: 14px;
	margin-bottom: 16px;
	padding: 8px;
	width: 300PX;
	border: 1px solid lightgrey;
	border-radius: 4px;
	background-color: white;
}

p {
	font-style: normal;
	font-weight: normal;
	font-size: 16px;
	line-height: 19px;
}

h1 {
	font-weight: normal;
}

button {
	padding: 8px 12px 8px 12px;
	min-width: 100px;
	height: 44px;
	font-size: 14px;
	line-height: 16px;
	text-align: center;
	border: none;
	border-radius: 4px;
	font-weight: 600;
	font-family: "Open Sans";
	transition-duration: 0.1s;
  }

.solid-btn{
	background-color: #3cb3e0;
	color: white;
}

.solid-btn:hover{
	cursor: pointer;
	background-color: #3197bd;
}


.main-container {
	width: 60vw;
	max-width: 700px;
	padding: 24px;
	display: none;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.main-container-header {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
	width: 100%
}

/* LOGGED OUT */
/* ***************************** */

#logged-out img{
	width: 200px;
}

#logged-out h4{
	font-weight: 400;
	margin-bottom: 64px;
}

i {
	margin-right: 8px;
  }
  

/* LOGGED IN */
/* ***************************** */

.form-list {
	width: 100%;
}


.form-list-head {
	margin-top: 60px;
	width: 100%;
	display: flex;
	flex-direction: horizontal;
	justify-content: space-between;
	padding: 8px 0px 8px 0px;
}

.form-list-head p{
	font-weight: 600;
}


.form-list-head button {
	background-color: #3cb3e0;
	color: white;
	cursor: pointer;
}

.form-list-item {
	background-color: white;
	display: flex;
	flex-direction: horizontal;
	justify-content: space-between;
	align-items: center;
	padding: 8px 16px 8px 16px;
	margin-top: 8px;
}

.form-list-item:hover{
	cursor: pointer;
	background-color: #e1e1e1;
}

.form-list-item a{
	color: black;
	text-decoration: none;
}


.form-list-item .del {
	cursor: pointer;
	margin-right: 20px;
}


.log-out {
	color: #8e8e8e;
	background: none;
	cursor: pointer;
}

.log-out:hover{
	color: black;
	text-decoration: underline;
}

